Bug 1599468 - fix(devtools memory panel): vertically align text in the interface for viewing nodes and retaining paths r=fvsch,julienw
Some text in the toolbar wasn't properly vertically aligned in this interface.

Differential Revision: https://phabricator.services.mozilla.com/D54743

UltraBlame original commit: 57f35e233652b075869453a55efe4e8ee68396eb

--- a/devtools/client/themes/memory.css
+++ b/devtools/client/themes/memory.css
@@ -828,6 +828,27 @@ center
 devtools
 -
 toolbar
+>
+.
+toolbar
+-
+text
+{
+display
+:
+flex
+;
+align
+-
+items
+:
+center
+;
+}
+.
+devtools
+-
+toolbar
 -
 select
 {
